Compiler/tests/errors/method_called_without_object.jack
// This file is part of the materials accompanying the book 
// "The Elements of Computing Systems" by Nisan and Schocken, 
// MIT Press. Book site: www.idc.ac.il/tecs
// File name: projects/10/ArrayTest/Main.jack

/** Computes the average of a sequence of integers. */

    
    class Main {
    field int x, y;

    constructor Main new() {
        return this;

    }

    method int give_me_x() {
           return x;
    }

    function void Main () {
    var int a;
        do give_me_x();
        return;
    }

    function int real_function(int b) {
        return 3;
    }
}